apps/yatchacha-api-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatchacha-api-server
  namespace: api
  labels:
    app: yatchacha-api-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatchacha-api-server
  template:
    metadata:
      labels:
        app: yatchacha-api-server
    spec:
      containers:
      - name: yatchacha-api-server
        image: hyeonwoo5342/yatchacha-api-server:2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: '200Mi'
            cpu: '100m'
          requests:
            memory: '200Mi'
            cpu: '100m'
        livenessProbe:
          httpGet:
            path: /mbti/user
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /mbti/user
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
