apps/yatchacha-api-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yatchacha-api-server-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.yatchacha.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: yatchacha-api-server
            port:
              number: 80
